# internal/transport/handler/responses/base.auth.responses/user-verificated.response.go
@@ -1,8 +1,8 @@
-package responses
+package base_auth_responses
 
 import "auth-microservice/internal/model"
 
-type UserLoginResponse struct {
+type VerificatedUserResponse struct {
 	Status   int             `json:"status"`
 	Message  string          `json:"message"`
 	UserInfo *model.UserInfo `json:"user_info"`
